feat: Added expense management and mock data
- Added expense table with mock data
- Implemented balance calculation
- Added expense actions (add/edit/delete)
- Fixed backend routes and CORS
- Added proper error handling

--- a/backend/wrangler.toml
+++ b/backend/wrangler.toml
@@ -11,7 +11,8 @@ database_id = "" # Will be filled after creating the database
 # KV for session management
 [[kv_namespaces]]
 binding = "SESSIONS"
-id = "" # Will be filled after creating the KV namespace
+id = "test-id" # This is just for local development
+preview_id = "test-id"
 
 # Environment variables
 [vars]
