--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -30,11 +30,12 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Install Wrangler
+        run: npm install -g wrangler@latest
+
       - name: Deploy to Cloudflare Workers
         if: github.ref == 'refs/heads/main'
-        run: |
-          npm install -g wrangler
-          wrangler deploy
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+        run: wrangler deploy
