--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -16,6 +16,9 @@ jobs:
     defaults:
       run:
         working-directory: ./frontend
+    permissions:
+      contents: read
+      deployments: write
 
     steps:
       - uses: actions/checkout@v4
